# cores

./: .gitignore  README.md  demo_memory.py  pyproject.toml  requirements.txt
.ai/ADR/: 0006-module-result.md  (+7 more)
benchmarks/: ablation_study.py  evaluation_framework.py  evaluation_runner.py  memory_benchmarks.py  run_benchmarks.py  scenario_generator.py  validation.py  visualization.py
docs/: README.md  architecture.md  commands.md  homepage.md  planning.md  scheduling.md  state-estimation.md  status.md
examples/: minimal_runtime.py
homepage/: next.config.js  package-lock.json  package.json  tailwind.config.ts
research/: adaptive_scheduler_design.md  experiment_001.md  mission_utility_definition.md  phase-4b-state-estimation.md  phase-4f-planning.md  phase-4g-memory.md  phase_2a5_discussion.md  phase_2a5_validation.md  phase_2a6_discussion.md  phase_2a6_evaluation_framework.md
tests/: benchmark_planning.py  benchmark_world_models.py  test_benchmarks.py  test_criticality_policy.py  test_evaluation_framework.py  test_evaluation_framework_phase2a6.py  test_event_bus.py  test_execution_layer.py  test_execution_tracing.py  test_integration.py  test_knapsack_scheduler.py  test_lexicographic_scheduler.py  test_memory.py  test_module_graph.py  test_module_registry.py  test_operator_policy.py  test_physicist.py  test_planning.py  test_planning_implementations.py  test_runtime.py  test_runtime_bridge.py  test_scheduler.py  test_state_estimation.py  test_state_estimator.py  test_validation.py  test_websocket_bridge.py  test_world_model.py  test_world_model_implementations.py
(+119 files in other folders)
