[project]
name = "cores-runtime"
version = "0.1.0"
description = "Context-Optimized Resilient Ensemble System"
authors = [
    { name = "CORES Contributors" }
]
dependencies = [
    "pydantic>=2.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
